--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section id="about">
         <div class="container">
             <h2>About Me</h2>
-            <p>Hello! I am a front-end developer passionate about creating beautiful and functional websites.</p>
+            <p>Hello!! I am a front-end developer passionate about creating beautiful and functional websites.</p>
         </div>
     </section>
 
